--- a/views/member/login.jade
+++ b/views/member/login.jade
@@ -1,10 +1,24 @@
-extends ../layout
+extends layout
 
 block content
-  .container
-    section.widget.login-widget
-      header.text-align-center
-        h4 Login to your account
+  - if ('undefined' !== typeof errors && errors.length)
+    ul#errors
+      - each error in errors
+        li.error= error
+  form(action='/login', method='post')
+    #login
+      label(for=everyauth.password.loginFormFieldName) Login
+      input(type='text', name=everyauth.password.loginFormFieldName, value=email)
+    #password
+      label(for=everyauth.password.passwordFormFieldName) Password
+      input(type='password', name=everyauth.password.passwordFormFieldName)
+    #submit
+      input(type='submit') Login
+
+//-   .container
+//-     section.widget.login-widget
+//-       header.text-align-center
+//-         h4 Login to your account
       //- form.form-signin(action='/login', method='post')
       //-   h2.form-signin-heading Please sign in
       //-   input.form-control(type='text', name="login", placeholder='Email address', autofocus='')
