--- a/views/member/register.jade
+++ b/views/member/register.jade
@@ -1,8 +1,17 @@
-extends ../layout
+extends layout
 
 block content
-  form.form-signin(action='/register', method='post')
-    h2.form-signin-heading Register
-    input.form-control(type='text', name="login", placeholder='Email address', autofocus='')
-    input.form-control(type='password', name="password", placeholder='Password')
-    button.btn.btn-large.btn-primary.btn-block(type='submit') Register
+  h2 Register
+  - if ('undefined' !== typeof errors && errors.length)
+    ul#errors
+      - each error in errors
+        li.error= error
+  form(action='/register', method='post')
+    #login
+      label(for=everyauth.password.loginFormFieldName) Login
+      input(type='text', name=everyauth.password.loginFormFieldName, value=userParams[everyauth.password.loginFormFieldName])
+    #password
+      label(for=everyauth.password.passwordFormFieldName) Password
+      input(type='password', name=everyauth.password.passwordFormFieldName)
+    #submit
+      input(type='submit') Register
