--- a/views/layout.jade
+++ b/views/layout.jade
@@ -17,7 +17,7 @@ html
       - for (var i = context.length - 1; i >= 0; i--)
         != renderStyles(context[i])
         != renderJs(context[i])
-    script(type='text/javascript')
+    script.
       App = {
         settings: !{JSON.stringify(page_settings)}
       }
