upgrade package.json

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@
 - var arg = current_path.split('/')
 - var layout_class = []
 - layout_class.push(arg[1])
-doctype 5
+doctype html
 html
   head
     title= title
