--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,7 +3,7 @@
 - var arg = current_path.split('/')
 - var layout_class = []
 - layout_class.push(arg[1])
-doctype 5
+doctype html
 html
   head
     title= title
@@ -12,7 +12,7 @@ html
 
     - if(typeof context == 'string')
       != renderStyles(context)
-      != renderJs(context)    
+      != renderJs(context)
     - else if(typeof context == 'object')
       - for (var i = context.length - 1; i >= 0; i--)
         != renderStyles(context[i])
